--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -107,7 +107,7 @@
         border-radius: 4px 4px 0 0;
         -webkit-box-shadow: 0 -1px 0 0 #e9f1f9;
         box-shadow: 0 -1px 0 0 #e9f1f9;
-        background: #dae6f2 !important;
+        background: rgb(248, 250, 252) !important;
         padding: 0;
         padding-left: 14px;
         .box {
