--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -834,6 +834,7 @@ body {
       width: 60px;
       height: auto;
       text-align: center;
+      font-size: 12px;
     }
 
     .hTxt1,
@@ -854,7 +855,7 @@ body {
     .hTxt82,
     .hTxt8,
     .hTxt81 {
-      width: 90px;
+      width: 78px;
     }
 
     .hTxt83 {
