--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -334,7 +334,8 @@
             }
         }
     }
-    .statistics-histogram {
+    .statistics-histogram,
+    .statistics-line {
         .static-where-2 .where-form .el-form-item {
             margin-right: 5px;
         }
