--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1730,10 +1730,9 @@ body {
       margin-left: 5px;
     }
 
-    .el-date-editor--date,
-    .el-date-editor--datetime {
+    .el-date-editor{
       input {
-        text-indent: 24px;
+        text-indent: 3px;
       }
     }
 
