--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -325,10 +325,10 @@
             .el-input__inner {
                 font-size: 15px;
             }
-            .el-date-editor--date input,
-            .el-date-editor--datetime input {
-                text-indent: 10px;
-            }
+            // .el-date-editor--date input,
+            // .el-date-editor--datetime input {
+            //     text-indent: 10px;
+            // }
             .el-radio-button .el-radio-button__inner {
                 padding: 8px 16px;
             }
