--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -340,7 +340,7 @@ body {
   @width1: 100px;
 
   .el-drawer {
-    width: 265px !important;
+    width: 404px !important;
     position: absolute;
   }
 
@@ -395,6 +395,17 @@ body {
       .mengban {
         display: block;
       }
+    }
+  }
+  .theme-choose{
+    .el-radio.is-bordered{
+      padding:0 10px;
+      line-height: 36px;
+      width: 172px;
+      margin-right: 20px;
+    }
+    .el-radio.is-bordered:nth-child(2n){
+      margin-right: 0;
     }
   }
 }
