--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -35,45 +35,45 @@ body {
   text-decoration: none;
   outline: none;
 }
-.KFQ_wrap {
+#bao-wei-charts .KFQ_wrap {
   height: 100%;
 }
-.KFQ_wrap .el-header {
+#bao-wei-charts .KFQ_wrap .el-header {
   width: 100%;
   height: 38px !important;
   display: flex;
   justify-content: space-between;
 }
-.KFQ_wrap .el-header .logo {
+#bao-wei-charts .KFQ_wrap .el-header .logo {
   height: 38px;
   line-height: 38px;
   width: 377px;
   display: flex;
   justify-items: center;
 }
-.KFQ_wrap .el-header .logo img {
+#bao-wei-charts .KFQ_wrap .el-header .logo img {
   height: 24px;
   margin-top: 6px;
 }
-.KFQ_wrap .el-header .logo span {
+#bao-wei-charts .KFQ_wrap .el-header .logo span {
   font-size: 16px;
   font-weight: 600;
   padding-right: 10px;
   color: white;
 }
-.KFQ_wrap .el-header .logo .menu_icon {
+#bao-wei-charts .KFQ_wrap .el-header .logo .menu_icon {
   font-size: 18px;
   font-weight: 500;
   margin-top: 8px;
   cursor: pointer;
 }
-.KFQ_wrap .el-header .header_menu {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu {
   display: flex;
   height: 38px;
   padding: 0;
   margin: 0;
 }
-.KFQ_wrap .el-header .header_menu li {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li {
   width: 130px;
   height: 38px;
   list-style: none;
@@ -85,46 +85,46 @@ body {
   cursor: pointer;
   position: relative;
 }
-.KFQ_wrap .el-header .header_menu li > span {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li > span {
   display: block;
   width: 100%;
   line-height: 38px;
 }
-.KFQ_wrap .el-header .header_menu li .el-icon-setting {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li .el-icon-setting {
   position: absolute;
   right: 5px;
   top: 11px;
   font-size: 16px;
   display: none;
 }
-.KFQ_wrap .el-header .header_menu li:hover .el-icon-setting {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li:hover .el-icon-setting {
   display: block;
 }
-.KFQ_wrap .el-header .header_menu li:first-child {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li:first-child {
   border-left: none;
 }
-.KFQ_wrap .el-header .header_menu li.active {
+#bao-wei-charts .KFQ_wrap .el-header .header_menu li.active {
   font-weight: 700;
   border-bottom: 3px solid #ffcd49;
   height: 35px;
   color: #ffcd49;
 }
-.KFQ_wrap .el-header .personal_information {
+#bao-wei-charts .KFQ_wrap .el-header .personal_information {
   line-height: 38px;
 }
-.KFQ_wrap .el-header .personal_information img {
+#bao-wei-charts .KFQ_wrap .el-header .personal_information img {
   vertical-align: middle;
 }
-.KFQ_wrap .el-header .personal_information .system {
+#bao-wei-charts .KFQ_wrap .el-header .personal_information .system {
   cursor: pointer;
 }
-.KFQ_wrap > .el-container {
+#bao-wei-charts .KFQ_wrap > .el-container {
   height: calc(100% - 38px);
 }
-.KFQ_wrap.isBigData > .el-container {
+#bao-wei-charts .KFQ_wrap.isBigData > .el-container {
   height: 100%;
 }
-.KFQ_wrap .el-aside {
+#bao-wei-charts .KFQ_wrap .el-aside {
   height: 100%;
   background: white;
   position: relative;
@@ -133,26 +133,26 @@ body {
   margin-bottom: 0;
   box-sizing: content-box;
 }
-.KFQ_wrap .el-aside .el-menu {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu {
   background: transparent;
 }
-.KFQ_wrap .el-aside .el-menu-item,
-.KFQ_wrap .el-aside .el-submenu__title {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item,
+#bao-wei-charts .KFQ_wrap .el-aside .el-submenu__title {
   color: white;
   background: transparent;
   position: relative;
 }
-.KFQ_wrap .el-aside .el-menu-item .el-submenu__icon-arrow,
-.KFQ_wrap .el-aside .el-submenu__title .el-submenu__icon-arrow {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item .el-submenu__icon-arrow,
+#bao-wei-charts .KFQ_wrap .el-aside .el-submenu__title .el-submenu__icon-arrow {
   color: white;
 }
-.KFQ_wrap .el-aside .el-menu-item > .txt,
-.KFQ_wrap .el-aside .el-submenu__title > .txt {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item > .txt,
+#bao-wei-charts .KFQ_wrap .el-aside .el-submenu__title > .txt {
   display: block;
   line-height: 40px;
 }
-.KFQ_wrap .el-aside .el-menu-item .el-icon-setting,
-.KFQ_wrap .el-aside .el-submenu__title .el-icon-setting {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item .el-icon-setting,
+#bao-wei-charts .KFQ_wrap .el-aside .el-submenu__title .el-icon-setting {
   position: absolute;
   right: 5px;
   top: 12px;
@@ -160,56 +160,56 @@ body {
   color: white;
   display: none;
 }
-.KFQ_wrap .el-aside .el-menu-item:hover .el-icon-setting,
-.KFQ_wrap .el-aside .el-submenu__title:hover .el-icon-setting {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item:hover .el-icon-setting,
+#bao-wei-charts .KFQ_wrap .el-aside .el-submenu__title:hover .el-icon-setting {
   display: block;
 }
-.KFQ_wrap .el-aside .el-menu-item.is-active {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item.is-active {
   color: white;
 }
-.KFQ_wrap .el-aside .el-menu-item:hover,
-.KFQ_wrap .el-aside .el-menu-item:focus {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item:hover,
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-item:focus {
   outline: none;
   color: white;
   background-color: #0083e6;
 }
-.KFQ_wrap .el-aside .menu_control {
+#bao-wei-charts .KFQ_wrap .el-aside .menu_control {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 20px;
   cursor: pointer;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo {
   height: 100%;
   overflow: auto;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo .el-menu-item,
-.KFQ_wrap .el-aside .el-menu-vertical-demo .el-submenu__title {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo .el-menu-item,
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo .el-submenu__title {
   height: 40px;
   line-height: 40px;
   color: white;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo .el-menu-item .iconfont,
-.KFQ_wrap .el-aside .el-menu-vertical-demo .el-submenu__title .iconfont {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo .el-menu-item .iconfont,
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo .el-submenu__title .iconfont {
   padding-right: 2px;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-submenu__title {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-submenu__title {
   padding-left: 15px !important;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-menu > .el-submenu > .el-submenu__title {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-menu > .el-submenu > .el-submenu__title {
   padding-left: 25px !important;
 }
-.KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-menu > .el-submenu > .el-menu > .el-menu-item {
+#bao-wei-charts .KFQ_wrap .el-aside .el-menu-vertical-demo > .el-submenu > .el-menu > .el-submenu > .el-menu > .el-menu-item {
   padding-left: 35px !important;
 }
-.KFQ_wrap .el-main {
+#bao-wei-charts .KFQ_wrap .el-main {
   height: 100%;
   position: relative;
   padding: 0;
   overflow: auto;
 }
-.KFQ_wrap .el-main .my_main_content {
+#bao-wei-charts .KFQ_wrap .el-main .my_main_content {
   height: 100%;
   position: relative;
 }
