--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -772,7 +772,7 @@ body {
       top: 2px;
       color: white;
       cursor: pointer;
-      z-index: 9999999999;
+      z-index: 9999;
     }
   }
 
@@ -927,7 +927,8 @@ body {
   .el-form-item__label {
     font-size: 13px;
     padding-right: 5px;
-    line-height: 34px;
+    line-height: 38px;
+    min-height: 38px;
   }
 
   .el-input-number {
@@ -950,6 +951,7 @@ body {
     padding: 5px;
     border: 1px solid @border;
     border-radius: 5px;
+    
   }
 
   .details-table-list,
@@ -1719,6 +1721,7 @@ body {
       margin-bottom: 0;
       margin-right: 5px;
       float: left;
+      min-height: 40px;
     }
 
     .el-input__inner {
