--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -176,6 +176,7 @@
             li.active {
                 border-bottom: 3px solid #ffcd49;
                 color: #ffcd49;
+                border: none;
             }
         }
     }
@@ -336,6 +337,7 @@
             }
             font-size: 15px;
             .el-radio-button__inner,
+            .el-checkbox-button__inner,
             .el-input__inner {
                 font-size: 15px;
             }
@@ -345,6 +347,16 @@
             // }
             .el-radio-button .el-radio-button__inner {
                 padding: 8px 16px;
+            }
+            .el-radio-button.is-active .el-radio-button__inner {
+                // padding: 9px 16px;
+                font-size: 17px;
+                font-weight: bold;
+            }
+            .el-checkbox-button.is-checked .el-checkbox-button__inner {
+                font-size: 17px;
+                font-weight: bold;
+                color: white;
             }
         }
     }
