--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -401,4 +401,11 @@
             }
         }
     }
+    .custom-components-view .custom-components-wrap .operation {
+        // background: #1890FF;
+        // color: white;
+        background: #f8fafc;
+        font-size: 16px;
+        border-bottom: 1px solid #dbdbdb;
+    }
 }
