--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -361,7 +361,8 @@
         }
     }
     .statistics-histogram,
-    .statistics-line {
+    .statistics-line,
+    .tdgyxt-charts {
         .static-where-2 .where-form .el-form-item {
             margin-right: 5px;
         }
