--- a/src/components/BaoWeiCharts/css/font/demo_index.html
+++ b/src/components/BaoWeiCharts/css/font/demo_index.html
@@ -55,6 +55,30 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfont">&#xe683;</span>
+                <div class="name">资产：闲置（低效）用地监管</div>
+                <div class="code-name">&amp;#xe683;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe632;</span>
+                <div class="name">钱</div>
+                <div class="code-name">&amp;#xe632;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe85d;</span>
+                <div class="name">握手,合作,协作</div>
+                <div class="code-name">&amp;#xe85d;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe6d3;</span>
+                <div class="name">塔吊</div>
+                <div class="code-name">&amp;#xe6d3;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe6a8;</span>
                 <div class="name">文档</div>
                 <div class="code-name">&amp;#xe6a8;</div>
@@ -396,9 +420,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1624418288122') format('woff2'),
-       url('iconfont.woff?t=1624418288122') format('woff'),
-       url('iconfont.ttf?t=1624418288122') format('truetype');
+  src: url('iconfont.woff2?t=1627909954285') format('woff2'),
+       url('iconfont.woff?t=1627909954285') format('woff'),
+       url('iconfont.ttf?t=1627909954285') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -423,6 +447,42 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfont iconzichanxianzhidixiaoyongdijianguan"></span>
+            <div class="name">
+              资产：闲置（低效）用地监管
+            </div>
+            <div class="code-name">.iconzichanxianzhidixiaoyongdijianguan
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon50"></span>
+            <div class="name">
+              钱
+            </div>
+            <div class="code-name">.icon50
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont iconcooperation"></span>
+            <div class="name">
+              握手,合作,协作
+            </div>
+            <div class="code-name">.iconcooperation
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icontadiao"></span>
+            <div class="name">
+              塔吊
+            </div>
+            <div class="code-name">.icontadiao
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfont iconwendang"></span>
@@ -936,6 +996,38 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconzichanxianzhidixiaoyongdijianguan"></use>
+                </svg>
+                <div class="name">资产：闲置（低效）用地监管</div>
+                <div class="code-name">#iconzichanxianzhidixiaoyongdijianguan</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon50"></use>
+                </svg>
+                <div class="name">钱</div>
+                <div class="code-name">#icon50</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconcooperation"></use>
+                </svg>
+                <div class="name">握手,合作,协作</div>
+                <div class="code-name">#iconcooperation</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icontadiao"></use>
+                </svg>
+                <div class="name">塔吊</div>
+                <div class="code-name">#icontadiao</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
