--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -176,7 +176,7 @@
             li.active {
                 border-bottom: 3px solid #ffcd49;
                 color: #ffcd49;
-                border: none;
+                border-bottom: none;
             }
         }
     }
@@ -345,6 +345,9 @@
             // .el-date-editor--datetime input {
             //     text-indent: 10px;
             // }
+            .el-checkbox-button--small .el-checkbox-button__inner {
+                padding: 8px 16px;
+            }
             .el-radio-button .el-radio-button__inner {
                 padding: 8px 16px;
             }
