--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -638,6 +638,10 @@ body {
     // text-indent: 3px;
   }
   .el-table__row {
+    // background: black;
+    // &:hover{
+    //   background: red !important;
+    // }
     td{
       text-align: center;
     }
