--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -207,7 +207,7 @@ body {
   height: 100%;
   position: relative;
   padding: 0;
-  overflow: auto;
+  overflow: hidden;
 }
 #bao-wei-charts .KFQ_wrap .el-main .my_main_content {
   height: 100%;
