--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -269,7 +269,7 @@ body {
     height: 100%;
     position: relative;
     padding: 0;
-    overflow: auto;
+    overflow: hidden;
 
     .my_main_content {
       height: 100%;
